--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forum Ejemplo</title>
 </head>
+
 <body>
     <h2>hola desde html</h2>
     <h2>estudyyyy</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat adipisci optio, tempore quia maiores, sed
+        dolor, sunt blanditiis incidunt alias aliquam cumque ipsa enim nemo. Distinctio error ullam dignissimos maxime.
+    </p>
+    <h1>olaaaa</h1>
 </body>
+
 </html>
